@@ -91,6 +91,9 @@ Graph Plugin:
 
 
 Bug-Fixes:
+2946165: preferences messages not translatable
+2946160: translation missing in refactoring
+2944128: remote not translatable
 2879711: Fix for Excel date export concerning dates earlier than 1900-03-01.
  		 Thanks to mironsadziak for the patch (Patch ID 2905218)
 2853329: Ctrl-S overwrites existing file on 2nd try
